[gd_scene load_steps=23 format=2]

[ext_resource path="res://pet_assets/pet-neutral.png" type="Texture" id=1]
[ext_resource path="res://Pet.gd" type="Script" id=2]
[ext_resource path="res://pet_assets/pet-right.png" type="Texture" id=3]
[ext_resource path="res://pet_assets/pet-left.png" type="Texture" id=4]
[ext_resource path="res://pet_assets/pet-idle-squished.png" type="Texture" id=5]
[ext_resource path="res://fonts/Apple II Pro.otf" type="DynamicFontData" id=6]
[ext_resource path="res://pet_assets/dialogue-box.png" type="Texture" id=7]
[ext_resource path="res://addons/adbox/DialogueBox.gd" type="Script" id=8]
[ext_resource path="res://pet_assets/pet-sad.png" type="Texture" id=9]
[ext_resource path="res://pet_assets/pet-left-squished.png" type="Texture" id=10]
[ext_resource path="res://pet_assets/pet-right-squished.png" type="Texture" id=11]
[ext_resource path="res://pet_assets/pet-sad-squished.png" type="Texture" id=12]
[ext_resource path="res://pet_assets/pet-sleepy-zs.png" type="Texture" id=13]
[ext_resource path="res://pet_assets/pet-sleepy-no-zs.png" type="Texture" id=14]
[ext_resource path="res://sounds/pet_sound.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ) ],
"loop": true,
"name": "right",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "sad",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "sleepy",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0
height = 16.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
font_data = ExtResource( 6 )

[node name="Pet" type="Area2D"]
position = Vector2( 648, 509 )
scale = Vector2( 5, 5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="DialogueBox" type="NinePatchRect" parent="."]
margin_left = -51.0
margin_top = -74.0
margin_right = 49.0
margin_bottom = -24.0
texture = ExtResource( 7 )
region_rect = Rect2( 0.0875092, 0.388367, 318.237, 77.4568 )
patch_margin_left = 13
patch_margin_top = 18
patch_margin_right = 12
patch_margin_bottom = 18
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
font = SubResource( 2 )
action_name = "advance_text"
wait_time = 0.08
margin_top_bottom = 8
margin_left_right = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 3 )

[node name="HungerMessageTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SleepyMessageTimer" type="Timer" parent="."]

[node name="HungerLevelTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SleepLevelTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LetterSendMenu" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.899993, -48.7 )
scale = Vector2( 0.312579, 0.638462 )
frames = SubResource( 7 )

[node name="LetterSend" type="TextEdit" parent="LetterSendMenu"]
margin_left = -146.0
margin_top = -32.0
margin_right = 148.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendLetter" type="Button" parent="LetterSendMenu"]
margin_left = -162.0
margin_top = -65.0
margin_right = 160.0
margin_bottom = -39.0
custom_colors/font_color_focus = Color( 0.243137, 0.243137, 0.243137, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.180392, 0.172549, 0.172549, 1 )
custom_fonts/font = SubResource( 6 )
text = "[Send Letter]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="input_event" from="." to="." method="_on_Pet_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Pet_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pet_mouse_exited"]
[connection signal="dialogue_exit" from="DialogueBox" to="." method="_on_DialogueBox_dialogue_exit"]
[connection signal="timeout" from="HungerMessageTimer" to="." method="_on_HungerMessageTimer_timeout"]
[connection signal="timeout" from="HungerLevelTimer" to="." method="_on_HungerLevelTimer_timeout"]
[connection signal="timeout" from="SleepLevelTimer" to="." method="_on_SleepLevelTimer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="focus_entered" from="LetterSendMenu/LetterSend" to="." method="_on_LetterSend_focus_entered"]
[connection signal="pressed" from="LetterSendMenu/SendLetter" to="." method="_on_SendLetter_pressed"]
